--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -126,7 +126,7 @@
    "source": [
     "#Code task 1#\n",
     "#Import pandas, matplotlib.pyplot, and seaborn in the correct lines below\n",
-    "import ___ as pd\n",
+    "import pandas as pd\n",
     "import ___ as plt\n",
     "import ___ as sns\n",
     "import os\n",
