still trying to figure out GitHub

--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -128,7 +128,7 @@
     "#Import pandas, matplotlib.pyplot, and seaborn in the correct lines below\n",
     "import pandas as pd\n",
     "import matplotlib.pylot as plt\n",
-    "import ___ as sns\n",
+    "import seaborn as sns\n",
     "import os\n",
     "\n",
     "from library.sb_utils import save_file\n"
