--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -139,7 +139,7 @@
     "#Code task 1#\n",
     "#Import pandas, matplotlib.pyplot, and seaborn in the correct lines below\n",
     "import pandas as pd\n",
-    "import ___ as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "import ___ as sns\n",
     "import os\n",
     "\n",
