--- a/Notebooks/02_data_wrangling.ipynb
+++ b/Notebooks/02_data_wrangling.ipynb
@@ -131,7 +131,7 @@
     "import seaborn as sns\n",
     "import os\n",
     "\n",
-    "from library.sb_utils import save_file\n"
+    "from library.sb_utils import save_file"
    ]
   },
   {
