--- a/Notebooks/04_preprocessing_and_training.ipynb
+++ b/Notebooks/04_preprocessing_and_training.ipynb
@@ -576,14 +576,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "array([63.81108808, 63.81108808, 63.81108808, 63.81108808, 63.81108808])"
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,14 +602,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "0.0"
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,14 +634,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "-0.0031235200417913944"
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,14 +705,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "17.923463717146785"
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,14 +723,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "19.136142081278486"
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -788,14 +788,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "614.1334096969057"
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,14 +806,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "581.4365441953481"
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,14 +831,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "array([24.78171523, 24.11299534])"
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,14 +870,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "(0.0, -0.0031235200417913944)"
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,14 +895,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "(17.92346371714677, 19.136142081278486)"
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -920,14 +920,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "(614.1334096969046, 581.4365441953483)"
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,14 +959,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "(0.0, -3.041041349306602e+30)"
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,14 +979,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "(-0.0031235200417913944, 0.0)"
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,14 +999,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "(0.0, -3.041041349306602e+30)"
      },
-     "execution_count": 34,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1019,14 +1019,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/9x/4ktjw_8s78q1z8kpx289bv3w0000gn/T/ipykernel_7736/1477922482.py:15: RuntimeWarning: divide by zero encountered in double_scalars\n",
+      "/var/folders/9x/4ktjw_8s78q1z8kpx289bv3w0000gn/T/ipykernel_4693/1477922482.py:15: RuntimeWarning: divide by zero encountered in double_scalars\n",
       "  R2 = 1.0 - sum_sq_res / sum_sq_tot\n"
      ]
     },
@@ -1034,7 +1034,7 @@
      "data": {
       "text/plain": "(-0.0031235200417913944, -inf)"
      },
-     "execution_count": 35,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,14 +1100,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "summit_elev                           2215.000000\nvertical_drop                          750.000000\nbase_elev                             1300.000000\ntrams                                    0.000000\nfastSixes                                0.000000\nfastQuads                                0.000000\nquad                                     1.000000\ntriple                                   1.000000\ndouble                                   1.000000\nsurface                                  2.000000\ntotal_chairs                             7.000000\nRuns                                    28.000000\nTerrainParks                             2.000000\nLongestRun_mi                            1.000000\nSkiableTerrain_ac                      170.000000\nSnow Making_ac                          96.500000\ndaysOpenLastYear                       109.000000\nyearsOpen                               57.000000\naverageSnowfall                        120.000000\nprojectedDaysOpen                      115.000000\nNightSkiing_ac                          70.000000\nresorts_per_state                       15.000000\nresorts_per_100kcapita                   0.248243\nresorts_per_100ksq_mile                 22.902162\nresort_skiable_area_ac_state_ratio       0.051458\nresort_days_open_state_ratio             0.071225\nresort_terrain_park_state_ratio          0.069444\nresort_night_skiing_state_ratio          0.077081\ntotal_chairs_runs_ratio                  0.200000\ntotal_chairs_skiable_ratio               0.040323\nfastQuads_runs_ratio                     0.000000\nfastQuads_skiable_ratio                  0.000000\ndtype: float64"
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1193,7 +1193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,14 +1213,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "(0.8177988515690604, 0.7209725843435146)"
      },
-     "execution_count": 41,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2910,7 +2910,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** Your answer here"
+    "**A: 1**\n",
+    "\n",
+    "Separated out big mountain resort.\n",
+    "\n",
+    "Created a train/test split. 70% train, 30% test.\n",
+    "\n",
+    "Removed name, state, region from train and test matrix and created a new train and test matrix with the name, state, region columns.\n",
+    "\n",
+    "Began to analyze the data using the mean. Used Sklearn dummy regressor on the training data and found it was the same as the mean.\n",
+    "\n",
+    "Created an R^2 function based on y observed values and y-predicted values.  Sklearn dummy regressor does the same thing as the function we created.\n",
+    "\n",
+    "Next looked at the mean absolute error and mean squared error metrics using functions we created.\n",
+    "\n",
+    "Sklearn has many commonly used metrics. Rather than writing our own function each time, use the sklearn metrics when possible.\n",
+    "\n",
+    "Next imputed missing values with the median. Then scaled the data using sklearn standard scalar.\n",
+    "\n",
+    "Used sklearn linear regression model to fit the scaled training set. Used the predict method on the model for the training and test sets.  Calculated the r^2. R^2 was higher for the train set (~80%) compared to the test set (~70%).\n",
+    "\n",
+    "Then used sklearn’s mean absolute error and mean squared functions.\n",
+    "\n",
+    "Imputed the train and test sets with the mean instead of median. Results were not very different.\n",
+    "\n",
+    "Looked at creating a sklearn pipeline to impute, scale and create our model.\n",
+    "\n",
+    "Refined our linear model using the score function. This yielded worse results. Refined again using a greater k value.\n",
+    "\n",
+    "Next, looked at assessing performance using cross-validation with 5 cross folds.\n",
+    "\n",
+    "Used GridSearchCV to find out best k. Best k is 8. Then looked at our linear model coefficients and found vertical drop is our biggest positive feature followed by snow making, total chairs and fast quads.\n",
+    "\n",
+    "Created a new pipeline with the random forest regressor. Random forest regressor produced the same 4 features but in a different order.\n",
+    "\n",
+    "Looked at both models, linear regression and random forest regressor. Random forest regressor had a lower cross-validation mean absolute error and less variability.\n"
    ]
   },
   {
