Completed w/ summary & what's next

--- a/Notebooks/05_modeling.ipynb
+++ b/Notebooks/05_modeling.ipynb
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +755,7 @@
       "text/plain": "     vertical_drop  Snow Making_ac  total_chairs  fastQuads   Runs  \\\n124           2353           600.0            14          3  105.0   \n\n     LongestRun_mi  trams  SkiableTerrain_ac  \n124            3.3      0             3000.0  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>vertical_drop</th>\n      <th>Snow Making_ac</th>\n      <th>total_chairs</th>\n      <th>fastQuads</th>\n      <th>Runs</th>\n      <th>LongestRun_mi</th>\n      <th>trams</th>\n      <th>SkiableTerrain_ac</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>124</th>\n      <td>2353</td>\n      <td>600.0</td>\n      <td>14</td>\n      <td>3</td>\n      <td>105.0</td>\n      <td>3.3</td>\n      <td>0</td>\n      <td>3000.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,14 +813,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "[-1, -2, -3, -4, -5, -6, -7, -8, -9, -10]"
      },
-     "execution_count": 37,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,14 +841,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "[0.0,\n -0.4057971014492807,\n -0.6666666666666714,\n -0.6666666666666714,\n -0.6666666666666714,\n -1.2608695652173907,\n -1.2608695652173907,\n -1.2608695652173907,\n -1.7101449275362341,\n -1.8115942028985472]"
      },
-     "execution_count": 39,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1010,14 +1010,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": "0.0"
      },
-     "execution_count": 45,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,7 +1053,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** Your answer here"
+    "**A:**\n",
+    "\n",
+    "In part 5, we start with removing the Big Mountain resort data. Our goal is to train a model to predict Big Mountain’s ticket price from all the data of the other resorts. Therefore, we need to calculate a price based on its competitors.\n",
+    "\n",
+    "After running the model on Big Mountain Resort data, the ticket price should be $95.87 (actual price is $81.00). This is assuming all other resorts are not mispricing their tickets.\n",
+    "\n",
+    "Looking at the distribution of ticket prices, Big Mountain is higher than most other resorts but definitely not the most expensive.  Big Mountain’s ticket price is the highest price for the state of Montana.\n",
+    "\n",
+    "Looking at vertical drop, Big Mountain has a greater vertical drop than most but there are still other resorts with a greater vertical drop.\n",
+    "\n",
+    "Big Mountain is near the top for snow making area and total chairs.\n",
+    "\n",
+    "Fast quads are rare as most resorts have zero.  Big Mountain resort has three fast quads.\n",
+    "\n",
+    "Comparatively, Big Mountain resort is near the top for runs, longest runs, and skiable terrain.\n",
+    "\n",
+    "Next we examined different scenarios comparing costs and revenue with the shortlist being: closing down runs, increasing vertical drop, adding more snow making, and increasing the longest run and snow making.\n",
+    "\n",
+    "Closing five runs will not have a dramatic price drop on tickets.  Closing more than five will impact ticket price.\n",
+    "\n",
+    "Increasing the vertical drop supports a $1.99 increase on ticket price but comes with the cost of installing a chair lift to serve the new area.\n",
+    "\n",
+    "Increasing snow making alone makes very little difference. Additionally, increasing the longest run and increasing snow making will have no difference whatsoever.\n"
    ]
   },
   {
@@ -1074,7 +1096,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 2** Your answer here"
+    "**A:**\n",
+    "\n",
+    "More work still needs to be completed as well as additional data. More information on operating costs would be helpful as it would allow for other features to be examined. The current ticket price was lower than the model because Big Mountain wasn’t taking into account the best features that customers look for. I do not think this would be a surprise to the executives. This model needs to be continually updated with current data. Automating parts of the model to update data would help.  Additionally, it would be wise to provide a working model to the executives where only a few parameters would need to be fed into it.  This way the executives could vary the inputs as they desire to see what effect it has on the model."
    ]
   },
   {
